--- a/Solo Space War/Info.plist
+++ b/Solo Space War/Info.plist
@@ -24,6 +24,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>effra-medium.ttf</string>
+		<string>effra-light.ttf</string>
+		<string>effra-heavy.ttf</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
