--- a/Solo Space War/Info.plist
+++ b/Solo Space War/Info.plist
@@ -29,6 +29,7 @@
 		<string>effra-medium.ttf</string>
 		<string>effra-light.ttf</string>
 		<string>effra-heavy.ttf</string>
+		<string>theboldfont.ttf</string>
 	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
